--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -34,7 +34,7 @@ patch:
       back_color: 0xF4F4F6 # 颜色 - 面板背景
       label_color: 0xaaaaaa # 颜色 - 候选序号
       font_face: "PingFangSC" # 字体 - 候选文字
-      font_point: 18 # 字体大小 - 候选
+      font_point: 16 # 字体大小 - 候选
       #label_font_face: Skia # 字体 - 候选数字
       #label_font_point: 14 # 字体大小 - 候选序号
       corner_radius: 4 # 候选框圆角大小
@@ -46,7 +46,7 @@ patch:
       preedit_back_color: 0x364572
       hilited_corner_radius: 4 # 圆角 - 首选候
       hilited_candidate_text_color: 0x4F11FA # 颜色 - 首选候选词 - 文字
-      hilited_candidate_back_color: 0xEDDDFF # 颜色 - 首选候选词 - 背景  8位的前两位是颜色透明度，00就是透明，FF就是不透明
+      hilited_candidate_back_color: 0xEDEAFF # 颜色 - 首选候选词 - 背景  8位的前两位是颜色透明度，00就是透明，FF就是不透明
       hilited_candidate_label_color: 0x884F11FA # 颜色 - 首选候选词 - 序号
       hilited_comment_text_color: 0x4F11FA # 颜色 - 首选候选词 - 提示编码
       candidate_text_color: 0x222222 # 颜色 - 其它候选词 - 文字
@@ -56,7 +56,7 @@ patch:
       inline_preedit: true # 输入的编码是否直接写入到输入框中，如果为 false，未上屏的编码就会写在候选框中
       spacing: 1 # 当 inline_preedit 为 false 时，编码会出现在候选面板中，该值控制编码与候选词之间的距离
       hilited_text_color: 0x8E8E93 # 颜色 - 输入中 - 编码
-      hilited_back_color: 0xEFEFF4 # 颜色 - 输入中 - 背景
+      hilited_back_color: 0xFFFFFF # 颜色 - 输入中 - 背景
 
     mac_light:
       name: Mac浅色
